--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,9 +1,9 @@
-.close__popup {
+.popup__close {
     position: absolute;
     top: -40px;
     right: -40px;
     padding: 0;
-    background-image: url(../../../img/Close-Icon.svg);
+    background-image: url(../../../image/Close-Icon.svg);
     background-position: center;
     background-size: contain;
     width: 32px;
@@ -15,13 +15,13 @@
     background-color: transparent;
 }
 
-.close__popup:hover {
+.popup__close:hover {
     opacity: 0.6;
     transition: opacity 1s linear;
 }
 
 @media screen and (max-width: 1279px) {
-    .close__popup {
+    .popup__close {
         width: 20px;
         height: 20px;
         top: -36px;
