--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -1,7 +1,7 @@
 .elements__like {
     width: 22px;
     height: 19px;
-    background-image: url(../../../img/Vector\ \(Stroke\).svg);
+    background-image: url(../../../image/Vector\ \(Stroke\).svg);
     background-repeat: no-repeat;
     background-position: 50%;
     background-size: contain;
