--- a/blocks/profile/__add/profile__add.css
+++ b/blocks/profile/__add/profile__add.css
@@ -1,5 +1,5 @@
 .profile__add {
-    background-image: url(../../../img/Vector.svg);
+    background-image: url(../../../image/Vector.svg);
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: 22px;
