--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -3,7 +3,13 @@
     margin: 0 auto;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1023px) {
+    .content {
+        max-width: 600px;
+    }
+}
+
+@media screen and (max-width: 767px) {
     .content {
         max-width: 282px;
     }
