--- a/blocks/elements/__info/elements__info.css
+++ b/blocks/elements/__info/elements__info.css
@@ -3,6 +3,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 31px 25px;
+    padding: 25px 15px 31px 21px;
     max-width: 246px;
 }
