--- a/blocks/elements/__item/elements__item.css
+++ b/blocks/elements/__item/elements__item.css
@@ -1,9 +1,8 @@
 .elements__item {
     max-width: 282px;
-    max-height: 361px;
     background-color: #FFFFFF;
     border-radius: 10px;
-    border: none;
+    border: #000000;
     overflow: hidden;
     display: flex;
     flex-direction: column;
