--- a/blocks/elements/__items/elements__items.css
+++ b/blocks/elements/__items/elements__items.css
@@ -7,8 +7,14 @@
     gap: 20px 17px;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1023px) {
     .elements__items {
-        grid-template-columns: 282px;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .elements__items {
+        grid-template-columns: 1fr;
     }
 }
