--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -3,7 +3,13 @@
     margin: 51px auto 67px;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1023px) {
+    .elements {
+        max-width: 600px;
+    }
+}
+
+@media screen and (max-width: 767px) {
     .elements {
         max-width: 282px;
         margin: 36px auto 48px;
