--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -14,7 +14,13 @@
     box-sizing: border-box;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1023px) {
+    .header {
+        max-width: 600px;
+    }
+}
+
+@media screen and (max-width: 767px) {
     .header {
         max-width: 320px;
         padding-top: 28px;
