--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,15 +1,16 @@
 .popup__container {
+    max-width: 430px;
+    padding: 34px 36px 37px;
     background-color: #ffffff;
-    color: #000;
-    display: flex;
-    flex-direction: column;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
     z-index: 4;
-    max-width: 358px;
-    margin: 0 auto;
+    position: relative;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 767px) {
     .popup__container {
-        max-width: 238px;
+        max-width: 282px;
+        padding: 25px 22px 25px 22px;
     }
 }
