--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -8,10 +8,11 @@
     line-height: 29px;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 767px) {
     .popup__title {
         max-width: 238px;
         font-size: 18px;
         line-height: 22px;
+        margin-bottom: 75px;
     }
 }
