--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -10,11 +10,17 @@
     max-width: 336px;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1023px) {
+    .profile__subtitle {
+        max-width: 282px;
+    }
+}
+
+@media screen and (max-width: 767px) {
     .profile__subtitle {
         font-size: 14px;
         line-height: 17px;
-        max-width: 282px;
         text-align: center;
+        max-width: 189px;
     }
 }
