--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -10,7 +10,13 @@
     grid-area: 1 / 1;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1023px) {
+    .profile__title {
+        max-width: 250px;
+    }
+}
+
+@media screen and (max-width: 767px) {
     .profile__title {
         font-size: 27px;
         line-height: 33px;
