--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -7,18 +7,17 @@
     background-color: transparent;
     color: #000;
     margin: 0 0 30px;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
-    color: #000000;
 }
 
 .popup__input:last-of-type {
     margin: 0;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 767px) {
     .popup__input {
         max-width: 238px;
     }
