--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -8,6 +8,12 @@
     position: relative;
 }
 
+@media screen and (max-width: 1023px) {
+    .popup__container {
+        max-width: 306px;
+    }
+}
+
 @media screen and (max-width: 767px) {
     .popup__container {
         max-width: 282px;
