--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -8,7 +8,13 @@
     margin: 0 auto;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1023px) {
+    .popup__form {
+        max-width: 306px;
+    }
+}
+
+@media screen and (max-width: 767px) {
     .popup__form {
         max-width: 238px;
     }
