--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -17,6 +17,12 @@
     margin: 0;
 }
 
+@media screen and (max-width: 1023px) {
+    .popup__input {
+        max-width: 100%;
+    }
+}
+
 @media screen and (max-width: 767px) {
     .popup__input {
         max-width: 238px;
