--- a/blocks/elements/__like-btn/elements__like-btn.css
+++ b/blocks/elements/__like-btn/elements__like-btn.css
@@ -1,4 +1,4 @@
-.like__btn {
+.elements__like-btn {
     width: 22px;
     height: 19px;
     background-image: url(../../../image/like.svg);
@@ -9,10 +9,10 @@
     padding: 0;
     background-color: transparent;
     z-index: 3;
+    transition: opacity 1s ease;
 }
 
-.like__btn:hover {
+.elements__like-btn:hover {
     cursor: pointer;
     opacity: 0.5;
-    transition: opacity 1s ease;
 }
