--- a/blocks/popup/__add-btn/popup__add-btn.css
+++ b/blocks/popup/__add-btn/popup__add-btn.css
@@ -11,6 +11,7 @@
     line-height: 22px;
     text-align: center;
     border: none;
+    border-radius: 2px;
 }
 
 @media screen and (max-width: 1279px) {
