--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -18,15 +18,10 @@
     cursor: pointer;
 }
 
-@media screen and (max-width: 1023px) {
-    .profile__add-btn {
-
-    }
-}
-
 @media screen and (max-width: 767px) {
     .profile__add-btn {
         width: 282px;
         padding: 17px 0 17px;
+        background-size: 16px;
     }
 }
