--- a/blocks/elements/__img/elements__img.css
+++ b/blocks/elements/__img/elements__img.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
     background-color: #fff;
     object-fit: contain;
-    width: 282px;
-    height: 282px;
+    max-width: 282px;
+    max-height: 282px;
     border-radius: 0px;
 }
