--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,7 @@
 .footer {
     max-width: 880px;
-    margin: 67px auto 60px;
+    margin: 0 auto;
+    padding-bottom: 60px;
 }
 
 @media screen and (max-width: 1023px) {
