--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -19,7 +19,16 @@
     opacity: 0.6;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1023px) {
+    .popup__close {
+        width: 25px;
+        height: 25px;
+        top: -32px;
+        right: -25px;
+    }
+}
+
+@media screen and (max-width: 767px) {
     .popup__close {
         width: 20px;
         height: 20px;
