--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,6 +1,5 @@
 .popup__container {
-    max-width: 430px;
-    padding: 34px 36px 37px;
+    width: 430px;
     background-color: #ffffff;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
@@ -10,13 +9,12 @@
 
 @media screen and (max-width: 1023px) {
     .popup__container {
-        max-width: 306px;
+        max-width: 350px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .popup__container {
         max-width: 282px;
-        padding: 25px 22px 25px 22px;
     }
 }
