--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,6 +1,5 @@
 .popup__input {
     max-width: 358px;
-    box-sizing: border-box;
     border: none;
     border-bottom: 1px solid rgb(0, 0, 0, 0.2);
     padding: 0 0 13px;
@@ -19,7 +18,7 @@
 
 @media screen and (max-width: 1023px) {
     .popup__input {
-        max-width: 100%;
+        max-width: 306px;
     }
 }
 
