--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,6 +1,6 @@
 .popup__title {
     max-width: 358px;
-    margin: 0 auto 54px;
+    margin: 34px auto 54px;
     padding: 0;
     font-family: inter;
     font-weight: 900;
@@ -11,6 +11,8 @@
 @media screen and (max-width: 1023px) {
     .popup__title {
         max-width: 306px;
+        font-size: 20px;
+        line-height: 24px;
     }
 }
 
@@ -19,6 +21,6 @@
         max-width: 238px;
         font-size: 18px;
         line-height: 22px;
-        margin-bottom: 75px;
+        margin: 25px auto 75px;
     }
 }
