--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -18,7 +18,13 @@
     cursor: pointer;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1023px) {
+    .profile__edit-btn {
+        margin-top: 8px;
+    }
+}
+
+@media screen and (max-width: 767px) {
     .profile__edit-btn {
         justify-self: center;
         width: 18px;
