--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -6,7 +6,11 @@
     box-sizing: border-box;
 }
 
-
+@media screen and (max-width: 1023px) {
+    .profile {
+        max-width: 600px;
+    }
+}
 
 @media screen and (max-width: 767px) {
     .profile {
