corrected the layout and script code

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,9 +1,9 @@
 .profile__info {
-    margin: 22px 25px 30px;
+    margin: 22px 30px 30px;
     max-width: 336px;
     display: grid;
     grid-template-rows: auto;
-    gap: 16px 18px;
+    gap: 0 18px;
 }
 
 @media screen and (max-width: 1023px) {
@@ -18,9 +18,9 @@
 @media screen and (max-width: 767px) {
     .profile__info {
         max-width: 282px;
-        margin: 22.25px auto 36px;
-        gap: 14px 10px;
+        gap: 10px 10px;
         flex-direction: column;
         grid-template-columns: max-content 25px;
+        margin-right: 19px;
     }
 }
