--- a/blocks/elements/__info/elements__info.css
+++ b/blocks/elements/__info/elements__info.css
@@ -2,7 +2,12 @@
     z-index: 2;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 25px 15px 31px 21px;
+    margin: 25px 15px 31px 21px;
     background-color: #ffffff;
+}
+
+@media screen and (max-width: 767px) {
+    .elements__info {
+        align-items: center;
+    }
 }
