--- a/blocks/elements/__item/elements__item.css
+++ b/blocks/elements/__item/elements__item.css
@@ -1,8 +1,12 @@
 .elements__item {
     max-width: 282px;
+    height: 361px;
     border-radius: 10px;
     border: #000000;
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    background-color: #FFFFFF;
+    margin: 0;
+    padding: 0;
 }
