--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,12 +3,19 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
-    margin: 0;
+    margin: 0 0 60px;
+}
+
+@media screen and (max-width: 1023px) {
+    .footer__copyright {
+        margin-bottom: 45px;
+    }
 }
 
 @media screen and (max-width: 767px) {
     .footer__copyright {
         font-size: 14px;
         line-height: 17px;
+        margin-bottom: 36px;
     }
 }
