--- a/blocks/popup/__add-btn/popup__add-btn.css
+++ b/blocks/popup/__add-btn/popup__add-btn.css
@@ -2,8 +2,8 @@
     background-color: #000000;
     color: #ffffff;
     cursor: pointer;
-    margin: 48px 0 0;
-    padding: 14px 0 18px;
+    margin: 0;
+    padding: 14px 0 14px;
     font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -25,6 +25,6 @@
         font-size: 14px;
         line-height: 17px;
         margin-top: 45px;
-        padding-bottom: 14px;
+        padding: 13px 0 14px;
     }
 }
