--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     z-index: 4;
     max-width: 358px;
-    margin: 0 auto 37px;
+    margin: 45px auto 37px;
 }
 
 @media screen and (max-width: 1023px) {
