--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,6 +1,6 @@
 .popup__title {
     max-width: 358px;
-    margin: 34px auto 54px;
+    margin: 34px auto 0;
     padding: 0;
     font-family: inter;
     font-weight: 900;
@@ -21,6 +21,6 @@
         max-width: 238px;
         font-size: 18px;
         line-height: 22px;
-        margin: 25px auto 75px;
+        margin: 25px auto 0;
     }
 }
