--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -5,6 +5,8 @@
     background-size: 22px;
     background-color: #000000;
     margin-left: auto;
+    margin-top: 35px;
+    margin-bottom: 35px;
     padding: 14px 0 14px;
     border: 2px solid #FFFFFF;
     border-radius: 2px;
@@ -21,6 +23,7 @@
 @media screen and (max-width: 767px) {
     .profile__add-btn {
         width: 282px;
+        margin: 0;
         padding: 17px 0 17px;
         background-size: 16px;
     }
