--- a/blocks/profile/__image/profile__image.css
+++ b/blocks/profile/__image/profile__image.css
@@ -3,3 +3,9 @@
     max-width: 120px;
     max-height: 120px;
 }
+
+@media screen and (max-width: 767px) {
+    .profile__image {
+        
+    }
+}
