--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -5,7 +5,7 @@
     padding: 0 0 13px;
     background-color: transparent;
     color: #000;
-    margin: 0 0 30px;
+    margin: 0 0 25px;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     font-size: 14px;
@@ -25,5 +25,9 @@
 @media screen and (max-width: 767px) {
     .popup__input {
         max-width: 238px;
+    }
+
+    .popup__input:last-of-type {
+        margin-bottom: 40px;
     }
 }
