--- a/blocks/popuup/popuup.css
+++ b/blocks/popuup/popuup.css
@@ -1,4 +1,4 @@
-.popup {
+.popuup {
     position: fixed;
     top: 0;
     right: 0;
@@ -6,10 +6,10 @@
     bottom: 0;
     background-color: rgb(0, 0, 0, 0.5);
     z-index: 4;
+    display: flex;
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
-    display: flex;
     width: 100%;
     height: 0;
     opacity: 0;
