--- a/pages/index.css
+++ b/pages/index.css
@@ -14,6 +14,7 @@
 @import url(../blocks/profile/__add-btn/profile__add-btn.css);
 
 @import url(../blocks/elements/elements.css);
+@import url(../blocks/elements/__delete-btn/elements__delete-btn.css);
 @import url(../blocks/elements/__items/elements__items.css);
 @import url(../blocks/elements/__item/elements__item.css);
 @import url(../blocks/elements/__img/elements__img.css);
@@ -34,3 +35,14 @@
 @import url(../blocks/popup/__input/_text/popup__input_text_subheading.css);
 @import url(../blocks/popup/__add-btn/popup__add-btn.css);
 @import url(../blocks/popup/__close/popup__close.css);
+
+@import url(../blocks/popuup/popuup.css);
+@import url(../blocks/popuup/_opened/popuup_opened.css);
+@import url(../blocks/popuup/__title/popuup__title.css);
+@import url(../blocks/popuup/__container/popuup__container.css);
+@import url(../blocks/popuup/__form/popuup__form.css);
+@import url(../blocks/popuup/__input/popuup__input.css);
+@import url(../blocks/popuup/__input/_text/popuup__input_text_link.css);
+@import url(../blocks/popuup/__input/_text/popuup__inpuut_text_heading.css);
+@import url(../blocks/popuup/__close/popuup__close.css);
+@import url(../blocks/popuup/__add-btn/popuup__add-btn.css);
