--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -1,9 +1,9 @@
-.popuup__add-btn {
+.button {
     background-color: #000000;
     color: #ffffff;
     cursor: pointer;
-    margin: 48px 0 0;
-    padding: 14px 0 18px;
+    margin: 0;
+    padding: 14px 0 14px;
     font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -14,17 +14,16 @@
     border-radius: 2px;
 }
 
-.popuup__add-btn:hover {
+.button:hover {
     opacity: 0.8;
     transition: opacity 1s ease;
     cursor: pointer;
 }
 
 @media screen and (max-width: 767px) {
-    .popuup__add-btn {
+    .button {
         font-size: 14px;
         line-height: 17px;
-        margin-top: 45px;
-        padding-bottom: 14px;
+        padding: 15px 0 14px;
     }
 }
