--- a/blocks/elements/__like-btn/elements__like-btn.css
+++ b/blocks/elements/__like-btn/elements__like-btn.css
@@ -1,15 +1,15 @@
 .elements__like-btn {
     width: 22px;
     height: 19px;
-    background-image: url(../../../image/like.svg);
+    background-image: url(../../../image/like.jpg);
     background-repeat: no-repeat;
     background-position: 50%;
-    background-size: contain;
+    background-size: 100%;
     border: none;
     padding: 0;
     margin-right: 2px;
     background-color: transparent;
-    z-index: 3;
+    z-index: 2;
     transition: opacity 1s ease;
 }
 
