--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -6,6 +6,7 @@
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
+    color: #000000;
 }
 
 @media screen and (max-width: 1023px) {
