--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -1,6 +1,9 @@
 .popup_opened {
     visibility: visible;
-    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
     opacity: 1;
-    transition-delay: 0s, 0s;
+    transition: all 0.5s, ease 0.3s;
 }
