--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,19 +1,11 @@
 .popup {
     position: fixed;
+    visibility: hidden;
     top: 0;
-    right: 0;
     left: 0;
-    bottom: 0;
     background-color: rgb(0, 0, 0, 0.5);
-    z-index: 4;
-    justify-content: center;
-    align-content: center;
-    flex-wrap: wrap;
-    display: flex;
+    z-index: 2;
     width: 100%;
-    height: 0;
+    height: 100%;
     opacity: 0;
-    transition-property: opacity, height;
-    transition-duration: 1s, 0.7s;
-    transition-delay: 0s, 1s;
 }
