--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,11 +1,11 @@
 .popup {
     position: fixed;
-    visibility: hidden;
+    opacity: 0;
     top: 0;
     left: 0;
     background-color: rgb(0, 0, 0, 0.5);
     z-index: 2;
     width: 100%;
     height: 100%;
-    opacity: 0;
+    display: none;
 }
