--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,5 +7,9 @@
     z-index: 2;
     width: 100%;
     height: 100%;
-    display: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.3s;
 }
+
+/* только я все равно не пойму почему при закрытии уезжает в сторону мой попап
