--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -12,4 +12,4 @@
     transition: all 0.3s;
 }
 
-/* только я все равно не пойму почему при закрытии уезжает в сторону мой попап
+/* только я все равно не пойму почему при закрытии уезжает в сторону мой попап  */
