--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -2,7 +2,7 @@
     background-color: #000000;
     color: #ffffff;
     cursor: pointer;
-    margin: 0;
+    margin-top: 10px;
     padding: 14px 0 14px;
     font-family: 'Inter', sans-serif;
     font-style: normal;
@@ -12,12 +12,13 @@
     text-align: center;
     border: none;
     border-radius: 2px;
+    cursor: pointer;
 }
 
 .button:hover {
     opacity: 0.8;
     transition: opacity 1s ease;
-    cursor: pointer;
+
 }
 
 @media screen and (max-width: 767px) {
