--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -2,19 +2,19 @@
     max-width: 358px;
     border: none;
     border-bottom: 1px solid rgb(0, 0, 0, 0.2);
-    padding: 0 0 13px;
+    padding: 0 0 10px;
     background-color: transparent;
     color: #000;
-    margin: 0 0 25px;
+    margin: 0 0 0;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
 }
 
-.popup__input:last-of-type {
+/* .popup__input:last-of-type {
     margin-bottom: 48px;
-}
+} */
 
 @media screen and (max-width: 1023px) {
     .popup__input {
