--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,6 +1,6 @@
 .popup__title {
     max-width: 358px;
-    margin: 34px auto 0;
+    margin: 34px auto 50px;
     padding: 0;
     font-family: inter;
     font-weight: 900;
