--- a/blocks/input/input-container.css
+++ b/blocks/input/input-container.css
@@ -1,9 +1,9 @@
-.input__container {
+.input-container {
     max-width: 100%;
     display: flex;
     flex-direction: column;
 }
 
-.input__container:last-of-type {
+.input-container:last-of-type {
     margin-bottom: 5px;
 }
