changing the names of functions, variables, as well as amendments to enablevalidation

--- a/blocks/elements/__delete-btn/elements__delete-btn.css
+++ b/blocks/elements/__delete-btn/elements__delete-btn.css
@@ -4,7 +4,7 @@
     right: 20px;
     width: 18px;
     height: 19px;
-    background-image: url(../../../image/Group.svg);
+    background-image: url(../../../images/Group.svg);
     background-size: contain;
     padding: 0;
     border: 0;
