--- a/blocks/elements/__like-btn/elements__like-btn.css
+++ b/blocks/elements/__like-btn/elements__like-btn.css
@@ -1,7 +1,7 @@
 .elements__like-btn {
     width: 22px;
     height: 19px;
-    background-image: url(../../../image/like.jpg);
+    background-image: url(../../../images/like.jpg);
     background-repeat: no-repeat;
     background-position: 50%;
     background-size: 100%;
