--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -3,7 +3,7 @@
     top: -40px;
     right: -40px;
     padding: 0;
-    background-image: url(../../../image/Close-Icon.svg);
+    background-image: url(../../../images/Close-Icon.svg);
     background-position: center;
     background-size: contain;
     width: 32px;
