--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -1,5 +1,5 @@
 .profile__add-btn {
-    background-image: url(../../../image/Vector.svg);
+    background-image: url(../../../images/Vector.svg);
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: 22px;
