--- a/blocks/elements/__like-btn/_active/elements__like-btn_active.css
+++ b/blocks/elements/__like-btn/_active/elements__like-btn_active.css
@@ -1,3 +1,3 @@
 .elements__like-btn_active {
-    background-image: url(../../../../image/like-active.png);
+    background-image: url(../../../../images/like-active.png);
 }
