--- a/src/blocks/popup/__avatar-container/popup__avatar-container.css
+++ b/src/blocks/popup/__avatar-container/popup__avatar-container.css
@@ -1,23 +1,20 @@
-.popup__container {
+.popup__avatar-container {
     width: 430px;
-    height: 330px;
-    background-color: #ffffff;
+    height: 272px;
+    background-color: #FFFFFF;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
-    z-index: 4;
     position: relative;
-    display: flex;
-    flex-direction: column;
 }
 
 @media screen and (max-width: 1023px) {
-    .popup__container {
+    .popup__avatar-container {
         max-width: 350px;
     }
 }
 
 @media screen and (max-width: 767px) {
-    .popup__container {
+    .popup__avatar-container {
         max-width: 282px;
     }
 }
