--- a/src/blocks/popup/__confirmation-container/popup__confirmation-container.css
+++ b/src/blocks/popup/__confirmation-container/popup__confirmation-container.css
@@ -1,23 +1,23 @@
-.popup__container {
+.popup__confirmation-container {
     width: 430px;
-    height: 330px;
-    background-color: #ffffff;
+    height: 181px;
+    background-color: #FFFFFF;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
-    z-index: 4;
     position: relative;
     display: flex;
     flex-direction: column;
+    
 }
 
 @media screen and (max-width: 1023px) {
-    .popup__container {
+    .popup__confirmation-container {
         max-width: 350px;
     }
 }
 
 @media screen and (max-width: 767px) {
-    .popup__container {
+    .popup__confirmation-container {
         max-width: 282px;
     }
 }
