--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,11 +1,6 @@
 .profile__image {
+    width: 120px;
+    height: 120px;
     border-radius: 50%;
-    max-width: 120px;
-    max-height: 120px;
-}
-
-@media screen and (max-width: 767px) {
-    .profile__image {
-        
-    }
+    object-fit: cover;
 }
