--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -12,6 +12,7 @@
 @import url(../blocks/profile/__subtitle/profile__subtitle.css);
 @import url(../blocks/profile/__edit-btn/profile__edit-btn.css);
 @import url(../blocks/profile/__add-btn/profile__add-btn.css);
+@import url(../blocks/profile/__edit/profile__edit.css);
 
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/elements/__delete-btn/elements__delete-btn.css);
@@ -22,12 +23,17 @@
 @import url(../blocks/elements/__like-btn/elements__like-btn.css);
 @import url(../blocks/elements/__like-btn/_active/elements__like-btn_active.css);
 @import url(../blocks/elements/__info/elements__info.css);
+@import url(../blocks/elements/__likes/elements__likes.css);
+@import url(../blocks/elements/__numberoflikes/elements__numberoflikes.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__avatar-container/popup__avatar-container.css);
+@import url(../blocks/popup/__confirmation-container/popup__confirmation-container.css);
+@import url(../blocks/popup/__title-confirmation/popup__title-confirmation.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__input/popup__input.css);
